--- a/www/partials/homeView.html
+++ b/www/partials/homeView.html
@@ -1,6 +1,6 @@
 <div class="topcoat-navigation-bar">
     <div class="topcoat-navigation-bar__item center three-quarters">
-        <h1 class="topcoat-navigation-bar__title">PhoneGap+AngularJS</h1>
+        <h1 class="topcoat-navigation-bar__title">Calc NA</h1>
     </div>
     <div class="topcoat-navigation-bar__item right quarter">
         <a class="topcoat-icon-button--quiet" ng-click="changeSettings()">
@@ -9,36 +9,24 @@
     </div>
 </div>
 <div class="topcoat-list__container list">
-    <h3 class="topcoat-list__header">PhoneGap API Samples</h3>
+    <h3 class="topcoat-list__header">Methods</h3>
+
+    <h4 class="topcoat-list__header">Equations with one variable</h4>
     <ul class="topcoat-list">
-        <li class="topcoat-list__item--first" ng-click="slidePage('/view8')">
-            HackerNews
+        <li class="topcoat-list__item--first" ng-click="slidePage('/incrementalSearch')">
+            Incremental Search
         </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/view1')">
-            Notification
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/view2')">
-            Geolocation
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/view3')">
-            Acceleration
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/view4')">
-            Device
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/view5')">
-            Camera
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/view6')">
-            Contacts
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/view7')">
-            Compass
+        <li class="topcoat-list__item" ng-click="slidePage('/bisection')">
+            Bisection
         </li>
     </ul>
+
+    <h4 class="topcoat-list__header">Whatever</h4>
+    <ul class="topcoat-list">
+        
+    </ul>
+
     <div class="topcoat-navigation-bar">
-        <h1 class="centerize"  ng-show="!showURL" ng-swipe-left="showURL=true">Version  {{' %VERSION%' | interpolate}} </h1>
-        <h1 class="centerize" ng-show="showURL" ng-swipe-right="showURL=false"><a href="http://devgirl.org">devgirl.org </a></h1>
     </div>
 </div>
 <ng-include src="'partials/settingsOverlay.html'"></ng-include>
