--- a/platforms/android/assets/www/partials/homeView.html
+++ b/platforms/android/assets/www/partials/homeView.html
@@ -1,6 +1,6 @@
 <div class="topcoat-navigation-bar">
     <div class="topcoat-navigation-bar__item center three-quarters">
-        <h1 class="topcoat-navigation-bar__title">PhoneGap+AngularJS</h1>
+        <h1 class="topcoat-navigation-bar__title">CalcNA</h1>
     </div>
     <div class="topcoat-navigation-bar__item right quarter">
         <a class="topcoat-icon-button--quiet" ng-click="changeSettings()">
@@ -9,9 +9,13 @@
     </div>
 </div>
 <div class="topcoat-list__container list">
-    <h3 class="topcoat-list__header">PhoneGap API Samples</h3>
+    <h3 class="topcoat-list__header">Methods</h3>
     <ul class="topcoat-list">
-        <li class="topcoat-list__item--first" ng-click="slidePage('/view8')">
+        <li class="topcoat-list__item--first" ng-click="slidePage('incrementalSearch')">
+            Incremental Search
+        </li>
+        <br/>
+        <li class="topcoat-list__item" ng-click="slidePage('/view8')">
             HackerNews
         </li>
         <li class="topcoat-list__item" ng-click="slidePage('/view1')">
