primera iteración búsqueda incremental

--- a/www/partials/bisectionView.html
+++ b/www/partials/bisectionView.html
@@ -14,7 +14,8 @@
     </div>
 </div>
 <div>
-    <p>
-        {{ test }}
-    </p>
+    <label>Nombre:</label>
+    <input type="text" ng-model="name"></input>
+    <br>
+    <h1>hola {{ name }}</h1>
 </div>
