--- a/www/partials/homeView.html
+++ b/www/partials/homeView.html
@@ -13,11 +13,14 @@
 
     <h4 class="topcoat-list__header">Equations with one variable</h4>
     <ul class="topcoat-list">
-        <li class="topcoat-list__item--first" ng-click="slidePage('/incrementalSearch')">
+        <li class="topcoat-list__item" ng-click="slidePage('/incrementalSearch')">
             Incremental Search
         </li>
         <li class="topcoat-list__item" ng-click="slidePage('/bisection')">
             Bisection
+        </li>
+        <li class="topcoat-list__item" ng-click="slidePage('/falsePosition')">
+            False Position
         </li>
     </ul>
 
