esqueleto para los demás metodos

--- a/www/partials/homeView.html
+++ b/www/partials/homeView.html
@@ -22,6 +22,18 @@
         <li class="topcoat-list__item" ng-click="slidePage('/falsePosition')">
             False Position
         </li>
+        <li class="topcoat-list__item" ng-click="slidePage('/fixedPoint')">
+            Fixed Point
+        </li>
+        <li class="topcoat-list__item" ng-click="slidePage('/newton')">
+            Newton
+        </li>
+        <li class="topcoat-list__item" ng-click="slidePage('/secant')">
+            Secant
+        </li>
+        <li class="topcoat-list__item" ng-click="slidePage('/multipleRoots')">
+            Multiple Roots
+        </li>                        
     </ul>
 
     <h4 class="topcoat-list__header">Whatever</h4>
