--- a/www/css/index.css
+++ b/www/css/index.css
@@ -109,6 +109,14 @@ p {
   color: #c6c8c8;
 }
 
+#canvas {
+  display: inline-block;
+}
+
+form {
+  display: inline-block;
+}
+
 h4 {
   padding: 0;
   margin: 0;
