--- a/www/partials/bisectionView.html
+++ b/www/partials/bisectionView.html
@@ -16,19 +16,21 @@
 <div>
     <form ng-submit="calculate()">
         <dl>
-            <dt><label>Equation:</label></dt>
+            <dt><h4>Equation:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="equation"></input></dd>
-            <dt><label>N. Iterations:</label></dt>
+            <dt><h4>N. Iterations:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="nIter"></input><br></dd>
-            <dt><label>Lower interval value:</label></dt>
+            <dt><h4>Lower interval value:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="xi"></input></dd>
-            <dt><label>Upper interval value:</label></dt>
+            <dt><h4>Upper interval value:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="xs"></input></dd>
-            <dt><label>Tolerance:</label></dt>
+            <dt><h4>Tolerance:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="tol"></input></dd>
         </dl>
         <input class="topcoat-button" type="submit" value="DO EET">
     </form>
+    <canvas id="canvas" width="300" height="300">
+    </canvas>
     <hr>
-    <h2>{{ root }}</h2>
+    <h4>{{ root }}</h4>
 </div>
