--- a/www/partials/fixedPointView.html
+++ b/www/partials/fixedPointView.html
@@ -16,21 +16,19 @@
 <div>
     <form ng-submit="calculate()">
         <dl>
-            <dt><h4>f(x):</h4></dt>
+            <dt><label>f(x):</label></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="equation_f"></input></dd>
-            <dt><h4>g(x):</h4></dt>
+            <dt><label>g(x):</label></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="equation_g"></input><br></dd>
-            <dt><h4>X0:</h4></dt>
+            <dt><label>X0:</label></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="x0"></input></dd>
-            <dt><h4># of iterations:</h4></dt>
+            <dt><label># of iterations:</label></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="nIter"></input></dd>
-            <dt><h4>Tolerance:</h4></dt>
+            <dt><label>Tolerance:</label></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="tol"></input></dd>
         </dl>
         <input class="topcoat-button" type="submit" value="DO EET">
     </form>
-    <canvas id="canvas" width="300" height="300">
-    </canvas>
     <hr>
-    <h4>{{ root }}</h4>
+    <h1>{{ root }}</h1>
 </div>
