--- a/www/partials/settingsOverlay.html
+++ b/www/partials/settingsOverlay.html
@@ -6,7 +6,7 @@
 		Operations:
 		<br>
 		Seno       = sin(x), sen(x)<br>
-		Arc Seno   = asin(x), sen(x)<br>
+		Arc Seno   = asin(x), asen(x)<br>
 		Coseno     = cos(x)<br>
 		Arc Coseno = acos(x)<br>
 		Tangente   = tan(x)<br>
@@ -28,7 +28,7 @@
 		<br>	
 		Constants:
 		<br>
-		Epsilon = e, E<br>
+		Euler = e, E<br>
 		Pi     = pi, PI
     </h1>
     <div class="topcoat-overlay-buttons">
