--- a/www/partials/settingsOverlay.html
+++ b/www/partials/settingsOverlay.html
@@ -1,6 +1,6 @@
 <div class="topcoat-overlay-bg" ng-show="showSettings" ></div>
 <aside id='settingsOverlay2' ng-show="showSettings" class="topcoat-overlay"  ng-controller="HomeCtrl">
-    <h1>
+    <p>
     	In this section you will find the way of using every operation, function or constant avaliable on our application. 
     	<br><br>
 		Operations:
@@ -8,7 +8,7 @@
 		Seno       = sin(x), sen(x)<br>
 		Arc Seno   = asin(x), asen(x)<br>
 		Coseno     = cos(x)<br>
-		Arc Coseno = acos(x)<br>
+		Arc Coseno = acos(x)<br>x
 		Tangente   = tan(x)<br>
 		Arc Tangente = atan(x)<br>
 		Raiz       = sqrt(x)<br>
@@ -28,9 +28,9 @@
 		<br>	
 		Constants:
 		<br>
-		Euler = e, E<br>
+		Euler  = e, E<br>
 		Pi     = pi, PI
-    </h1>
+    </p>
     <div class="topcoat-overlay-buttons">
     	
 
