--- a/www/partials/falsePositionView.html
+++ b/www/partials/falsePositionView.html
@@ -1,7 +1,7 @@
 <div class="topcoat-navigation-bar" ng-controller="HomeCtrl">
     <div class="topcoat-navigation-bar__item left quarter">
-        <a class="topcoat-icon-button--quiet" ng-click="slidePage('/','modal')">
-            <span class="topcoat-icon home-icon"></span>
+        <a class="topcoat-icon-button--quiet" ng-click="slidePage('/eqOneVariable','modal')">
+            <span class="topcoat-icon arrowleft"></span>
         </a>
     </div>
     <div class="topcoat-navigation-bar__item center half">
@@ -16,7 +16,7 @@
 <div>
     <form ng-submit="calculate()">
         <dl>
-            <dt><h4>Equation:</h4></dt>
+            <dt><h4>f(x):</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="equation"></input></dd>
             <dt><h4>N. Iterations:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="nIter"></input><br></dd>
