--- a/www/partials/homeView.html
+++ b/www/partials/homeView.html
@@ -9,31 +9,17 @@
     </div>
 </div>
 <div class="topcoat-list__container list">
-    <h3 class="topcoat-list__header">Methods</h3>
-
-    <h4 class="topcoat-list__header">Equations with one variable</h4>
+    <h4 class="topcoat-list__header">Type of Method</h4>
     <ul class="topcoat-list">
-        <li class="topcoat-list__item" ng-click="slidePage('/incrementalSearch')">
-            Incremental Search
+        <li class="topcoat-list__item" ng-click="slidePage('/eqOneVariable')">
+            Equations with one variable
         </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/bisection')">
-            Bisection
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/falsePosition')">
-            False Position
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/fixedPoint')">
-            Fixed Point
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/newton')">
-            Newton
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/secant')">
-            Secant
-        </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/multipleRoots')">
-            Multiple Roots
-        </li>                        
+        <li class="topcoat-list__item" ng-click="slidePage('/EqSystems')">
+            Equation systems
+        </li>                     
+        <li class="topcoat-list__item" ng-click="slidePage('/Interpolation')">
+            Interpolation
+        </li>                     
     </ul>
 
     <h4 class="topcoat-list__header">Whatever</h4>
