--- a/www/partials/newtonView.html
+++ b/www/partials/newtonView.html
@@ -1,7 +1,7 @@
 <div class="topcoat-navigation-bar" ng-controller="HomeCtrl">
     <div class="topcoat-navigation-bar__item left quarter">
-        <a class="topcoat-icon-button--quiet" ng-click="slidePage('/','modal')">
-            <span class="topcoat-icon home-icon"></span>
+        <a class="topcoat-icon-button--quiet" ng-click="slidePage('/eqOneVariable','modal')">
+            <span class="topcoat-icon arrowleft"></span>
         </a>
     </div>
     <div class="topcoat-navigation-bar__item center half">
@@ -22,7 +22,7 @@
             <dd><input type="text" class="topcoat-text-input" ng-model="equation_g"></input><br></dd>
             <dt><h4>X0:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="x0"></input></dd>
-            <dt><h4># of iterations:</h4></dt>
+            <dt><h4>N. Iterations:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="nIter"></input></dd>
             <dt><h4>Tolerance:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="tol"></input></dd>
