Update- ecuaciones solo se insertan una vez en todos los metodos

--- a/www/partials/bisectionView.html
+++ b/www/partials/bisectionView.html
@@ -17,7 +17,7 @@
     <form ng-submit="calculate()">
         <dl>
             <dt><h4>f(x):</h4></dt>
-            <dd><input type="text" class="topcoat-text-input" ng-model="equation"></input></dd>
+            <dd><input type="text" class="topcoat-text-input" placeholder="{{ f }}" ng-model="equation"></input></dd>
             <dt><h4>N. Iterations:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="nIter"></input><br></dd>
             <dt><h4>Lower interval value:</h4></dt>
