--- a/www/partials/multipleRootsView.html
+++ b/www/partials/multipleRootsView.html
@@ -17,11 +17,11 @@
     <form ng-submit="calculate()">
         <dl>
             <dt><h4>f(x):</h4></dt>
-            <dd><input type="text" class="topcoat-text-input" ng-model="equation_f"></input></dd>
+            <dd><input type="text" class="topcoat-text-input" placeholder="{{ f }}" ng-model="equation_f"></input></dd>
             <dt><h4>f'(x):</h4></dt>
-            <dd><input type="text" class="topcoat-text-input" ng-model="equation_f1"></input><br></dd>
+            <dd><input type="text" class="topcoat-text-input" placeholder="{{ f1 }}" ng-model="equation_f1"></input><br></dd>
             <dt><h4>f''(x):</h4></dt>
-            <dd><input type="text" class="topcoat-text-input" ng-model="equation_f2"></input></dd>
+            <dd><input type="text" class="topcoat-text-input" placeholder="{{ f2 }}" ng-model="equation_f2"></input></dd>
             <dt><h4>X0</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="x0"></input></dd>
             <dt><h4>N. Iterations:</h4></dt>
