--- a/www/partials/newtonView.html
+++ b/www/partials/newtonView.html
@@ -17,9 +17,9 @@
     <form ng-submit="calculate()">
         <dl>
             <dt><h4>f(x):</h4></dt>
-            <dd><input type="text" class="topcoat-text-input" ng-model="equation_f"></input></dd>
+            <dd><input type="text" class="topcoat-text-input" placeholder="{{ f }}" ng-model="equation_f"></input></dd>
             <dt><h4>f'(x):</h4></dt>
-            <dd><input type="text" class="topcoat-text-input" ng-model="equation_g"></input><br></dd>
+            <dd><input type="text" class="topcoat-text-input" placeholder="{{ g }}"  ng-model="equation_g"></input><br></dd>
             <dt><h4>X0:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="x0"></input></dd>
             <dt><h4>N. Iterations:</h4></dt>
