--- a/www/partials/secantView.html
+++ b/www/partials/secantView.html
@@ -17,7 +17,7 @@
     <form ng-submit="calculate()">
         <dl>
             <dt><h4>f(x):</h4></dt>
-            <dd><input type="text" class="topcoat-text-input" ng-model="equation_f"></input></dd>
+            <dd><input type="text" class="topcoat-text-input" placeholder="{{ f }}" ng-model="equation_f"></input></dd>
             <dt><h4>X0:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="x0"></input><br></dd>
             <dt><h4>X1:</h4></dt>
