--- a/www/partials/EqOneVariableView.html
+++ b/www/partials/EqOneVariableView.html
@@ -23,6 +23,9 @@
 
     <h4 class="topcoat-list__header">Then, choose a method:</h4>
     <ul class="topcoat-list">
+        <li class="topcoat-list__item" ng-click="slidePage('/graph')">
+            Graph
+        </li>
         <li class="topcoat-list__item" ng-click="slidePage('/incrementalSearch')">
             Incremental Search
         </li>
