--- a/www/partials/incrementalSearchView.html
+++ b/www/partials/incrementalSearchView.html
@@ -31,7 +31,7 @@
 	</form>
     <hr>
     <h4>{{ root }}</h4>
-    <table id="table" style="width:300px">
+    <table id="table" style="width:300px" border="1">
         <tr id="heading">
           <th>X</th>
           <th>Y</th>
