--- a/www/partials/falsePositionView.html
+++ b/www/partials/falsePositionView.html
@@ -31,4 +31,14 @@
     </form>
     <hr>
     <h4>{{ root }}</h4>
+    <table id="table" style="width:300px" border="1">
+        <tr id="heading">
+          <th>Xi</th>
+          <th>Xs</th>
+          <th>Xm</th>
+          <th>f(Xm)</th>
+          <th>Error</th>
+        </tr>
+    </table>
+
 </div>
