el commit infame de los infiernos endemoniados con los cambios que se tiraron en todo

--- a/www/partials/homeView.html
+++ b/www/partials/homeView.html
@@ -14,10 +14,10 @@
         <li class="topcoat-list__item" ng-click="slidePage('/eqOneVariable')">
             Equations with one variable
         </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/EqSystems')">
+        <li class="topcoat-list__item">
             Equation systems
         </li>                     
-        <li class="topcoat-list__item" ng-click="slidePage('/Interpolation')">
+        <li class="topcoat-list__item">
             Interpolation
         </li>                     
     </ul>
