--- a/www/partials/homeView.html
+++ b/www/partials/homeView.html
@@ -14,7 +14,7 @@
         <li class="topcoat-list__item" ng-click="slidePage('/eqOneVariable')">
             Equations with one variable
         </li>
-        <li class="topcoat-list__item">
+        <li class="topcoat-list__item" ng-click="slidePage('/linearEquationSystem')">
             Equation systems
         </li>                     
         <li class="topcoat-list__item">
