--- a/www/partials/newtonView.html
+++ b/www/partials/newtonView.html
@@ -19,7 +19,7 @@
             <dt><h4>f(x):</h4></dt>
             <dd><input type="text" class="topcoat-text-input" placeholder="{{ f }}" ng-model="f"></input></dd>
             <dt><h4>f'(x):</h4></dt>
-            <dd><input type="text" class="topcoat-text-input" placeholder="{{ g }}"  ng-model="g"></input><br></dd>
+            <dd><input type="text" class="topcoat-text-input" placeholder="{{ ff }}"  ng-model="ff"></input><br></dd>
             <dt><h4>X0:</h4></dt>
             <dd><input type="text" class="topcoat-text-input" ng-model="x0"></input></dd>
             <dt><h4>N. Iterations:</h4></dt>
