me lleva el chanfle

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -20,6 +20,9 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0
     */
 }
+tr, tbody, table, form, input {
+    width: 95%;
+}
 .input {
     margin-left: 5px;
 }
