--- a/www/partials/homeView.html
+++ b/www/partials/homeView.html
@@ -14,19 +14,13 @@
         <li class="topcoat-list__item" ng-click="slidePage('/eqOneVariable')">
             Equations with one variable
         </li>
-        <li class="topcoat-list__item" ng-click="slidePage('/linearEquationSystem')">
+        <li class="topcoat-list__item" ng-click="slidePage('/linearEquations')">
             Equation systems
         </li>                     
         <li class="topcoat-list__item">
             Interpolation
         </li>                     
     </ul>
-
-    <h4 class="topcoat-list__header">Whatever</h4>
-    <ul class="topcoat-list">
-        
-    </ul>
-
     <div class="topcoat-navigation-bar">
     </div>
 </div>
