--- a/www/partials/homeView.html
+++ b/www/partials/homeView.html
@@ -17,9 +17,12 @@
         <li class="topcoat-list__item" ng-click="slidePage('/linearEquations')">
             Equation systems
         </li>                     
-        <li class="topcoat-list__item">
+        <li class="topcoat-list__item" ng-click="slidePage('/interpolation')">
             Interpolation
-        </li>                     
+        </li>         
+        <li class="topcoat-list__item" ng-click="slidePage('/integration')">
+            Integration
+        </li>
     </ul>
     <div class="topcoat-navigation-bar">
     </div>
