--- a/www/partials/linearEquationSystemView.html
+++ b/www/partials/linearEquationSystemView.html
@@ -33,7 +33,7 @@
             Gaussian Elimination - Partial pivoting
         </li>
         <li class="topcoat-list__item" ng-click="slidePage('/ge_stepped')">
-            Gaussian Elimination - Escaloneishon pivoting
+            Gaussian Elimination - Stepped pivoting
         </li>
         <li class="topcoat-list__item" ng-click="slidePage('/lu_doolittle')">
             LU Factorization - Doolittle
