--- a/www/partials/eqSys/ge_partialView.html
+++ b/www/partials/eqSys/ge_partialView.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <div class="topcoat-navigation-bar__item center half">
-        <h1 class="topcoat-navigation-bar__title">Gaussian Elimination - Partial Pivoting</h1>
+        <h3 class="topcoat-navigation-bar__title">Gaussian Elimination - Partial Pivoting</h3>
     </div>
     <div class="topcoat-navigation-bar__item right quarter">
         <a class="topcoat-icon-button--quiet" ng-click="changeSettings()">
@@ -13,7 +13,7 @@
         </a>
     </div>
 </div>
-<div class="input">
+<div>
     <table id="table" style="width:300px" border="1">
     </table>
 </div>
